Implementando a realização de pagamentos a receber